[package]
name = "wasm-spa"
version = "0.2.0"
edition = "2021"
authors = ["Cleisson Barbosa <cleissonbarbosa68@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/cleissonbarbosa/wasm-spa"
description = "O desenvolvimento de aplicações web modernas tem evoluído rapidamente, e a combinação de Rust com WebAssembly (Wasm) oferece uma nova abordagem para construir Single Page Applications (SPA) altamente performáticas e seguras."
repository = "https://github.com/cleissonbarbosa/wasm-spa"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.84"
reqwasm = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }